--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@
 @media only screen and (max-width: 620px) {
 
     .titulo{
-        margin-left: 15%;
+        margin-left: 0;
         margin-bottom: 15%;
     }
     .parte_central{
